fixed user and customer auth
