# api-gateway/api/docs/swagger.json
@@ -106,7 +106,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "customer_auth"
+                    "customer_auth1"
                 ],
                 "summary": "forgot password",
                 "parameters": [
@@ -300,7 +300,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "customer_auth"
+                    "customer_auth1"
                 ],
                 "summary": "update password",
                 "parameters": [
@@ -429,7 +429,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "customer_auth"
+                    "customer_auth1"
                 ],
                 "summary": "Verify forgot password",
                 "parameters": [
@@ -878,7 +878,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "staff_auth"
+                    "staff_auth1"
                 ],
                 "summary": "staff forgot password",
                 "parameters": [
@@ -1088,7 +1088,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "staff_auth"
+                    "staff_auth1"
                 ],
                 "summary": "staff update password",
                 "parameters": [
@@ -1217,7 +1217,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "staff_auth"
+                    "staff_auth1"
                 ],
                 "summary": "verify staff forgot password",
                 "parameters": [
@@ -1678,8 +1678,7 @@
                 "type": {
                     "type": "string",
                     "enum": [
-                        "superadmin",
-                        "user"
+                        "staff"
                     ]
                 },
                 "user_name": {
